program/y.output
Grammar

    0 $accept: line_list $end

    1 line_list: line
    2          | line_list line

    3 $@1: /* empty */

    4 line: $@1 E CR

    5 E: T
    6  | E GRE T
    7  | E LES T

    8 T: number


Terminals, with rules where they appear

$end (0) 0
error (256)
number (258) 8
GRE (259) 6
LES (260) 7
CR (261) 4


Nonterminals, with rules where they appear

$accept (7)
    on left: 0
line_list (8)
    on left: 1 2, on right: 0 2
line (9)
    on left: 4, on right: 1 2
$@1 (10)
    on left: 3, on right: 4
E (11)
    on left: 5 6 7, on right: 4 6 7
T (12)
    on left: 8, on right: 5 6 7


state 0

    0 $accept: . line_list $end

    $default  reduce using rule 3 ($@1)

    line_list  go to state 1
    line       go to state 2
    $@1        go to state 3


state 1

    0 $accept: line_list . $end
    2 line_list: line_list . line

    $end  shift, and go to state 4

    $default  reduce using rule 3 ($@1)

    line  go to state 5
    $@1   go to state 3


state 2

    1 line_list: line .

    $default  reduce using rule 1 (line_list)


state 3

    4 line: $@1 . E CR

    number  shift, and go to state 6

    E  go to state 7
    T  go to state 8


state 4

    0 $accept: line_list $end .

    $default  accept


state 5

    2 line_list: line_list line .

    $default  reduce using rule 2 (line_list)


state 6

    8 T: number .

    $default  reduce using rule 8 (T)


state 7

    4 line: $@1 E . CR
    6 E: E . GRE T
    7  | E . LES T

    GRE  shift, and go to state 9
    LES  shift, and go to state 10
    CR   shift, and go to state 11


state 8

    5 E: T .

    $default  reduce using rule 5 (E)


state 9

    6 E: E GRE . T

    number  shift, and go to state 6

    T  go to state 12


state 10

    7 E: E LES . T

    number  shift, and go to state 6

    T  go to state 13


state 11

    4 line: $@1 E CR .

    $default  reduce using rule 4 (line)


state 12

    6 E: E GRE T .

    $default  reduce using rule 6 (E)


state 13

    7 E: E LES T .

    $default  reduce using rule 7 (E)
